# padraoandretorres

./: .gitignore  Dockerfile  README.md  data_model.md  docker-compose.yml  dump-app-202401202226.sql  entrypoint.sh  local.env  planejamento.md  pyproject.toml
padraoandretorres/: cert.crt  cert.key  cert.pem  key.pem  manage.py
padraoandretorres/branches/admin/: __init__.py  branch.py  course.py
padraoandretorres/branches/apps/: __init__.py
padraoandretorres/branches/migrations/: 0001_initial.py  0002_initial.py  0003_remove_studentcourseagenda_user_and_more.py  0004_studentcourseagenda_student_and_more.py  0005_alter_branch_id_alter_course_id_and_more.py  0006_alter_branch_id_alter_course_id_and_more.py  0007_remove_course_duration.py  0008_courseschedule_branch_alter_course_unique_together.py  0009_alter_course_options.py  0010_remove_courseschedule_branch.py  0011_alter_courseschedule_day_of_week_and_more.py
padraoandretorres/branches/models/: __init__.py  branch.py  course.py
padraoandretorres/core/admin/: __init__.py  base.py  core.py
padraoandretorres/core/apps/: __init__.py
padraoandretorres/core/migrations/: 0001_initial.py  0002_alter_week_id.py  0003_alter_week_id.py  0004_alter_week_id.py
padraoandretorres/core/models/: __init__.py  base.py  core.py
padraoandretorres/padraoandretorres/: asgi.py  settings.py  urls.py  wsgi.py
padraoandretorres/users/: signals.py
padraoandretorres/users/admin/: __init__.py  student.py  teacher.py  user.py
padraoandretorres/users/apps/: __init__.py
padraoandretorres/users/migrations/: 0001_initial.py  (+8 more)
(+4 files in other folders)
